// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 01 基本 1スタッフ1日 シフト内 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 02 バッファあり（施術60+バッファ15で占有75分） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 03 override_duration がベースより短い 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "10:30",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:30",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 04 override_duration がベースより長い 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "11:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 05 複数スタッフ（指名任意が先に並ぶ） 1`] = `
{
  "by_staff": [
    {
      "display_name": "佐藤",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "14:00",
          "start": "13:00",
        },
        {
          "date": "2026-05-09",
          "end": "14:30",
          "start": "13:30",
        },
        {
          "date": "2026-05-09",
          "end": "15:00",
          "start": "14:00",
        },
      ],
      "staff_id": "S2",
    },
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 06 複数日（シフトが飛び飛び・中日は休み） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-11",
          "end": "15:00",
          "start": "14:00",
        },
        {
          "date": "2026-05-11",
          "end": "15:30",
          "start": "14:30",
        },
        {
          "date": "2026-05-11",
          "end": "16:00",
          "start": "15:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 07 既存予約で分断される 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "14:00",
          "start": "13:00",
        },
        {
          "date": "2026-05-09",
          "end": "14:30",
          "start": "13:30",
        },
        {
          "date": "2026-05-09",
          "end": "15:00",
          "start": "14:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 08 満杯（シフト全体が予約で埋まっている） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 09 隣接する予約が2件（隙間がちょうど1枠） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 10 リードタイム境界ちょうど 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 11 リードタイム境界の1分後（先頭が落ちる） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 12 リードタイム 0（管理画面の電話予約） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 13 JST 日跨ぎ（UTC では前日の予約が JST 当日を塞ぐ） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 14 端数シフト 10:15-12:45（粒度30分の丸め） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 15 メニューがシフトより長い（1枠も出ない） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 16 staff_id 指定 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 17 メニューが見つからない 1`] = `
{
  "by_staff": [],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 18 スタッフ0件 1`] = `
{
  "by_staff": [],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 19 シフトが1日も無い 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 20 範囲外の予約は影響しない 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-09",
          "end": "11:30",
          "start": "10:30",
        },
        {
          "date": "2026-05-09",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-09",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-09",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 21 9月（月名の文字列置換バグの回帰枠） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-09-10",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-09-10",
          "end": "13:00",
          "start": "12:00",
        },
      ],
      "staff_id": "S1",
    },
  ],
}
`;

exports[`getAvailability ゴールデン（設備0件＝美容室の状態） > 22 複数スタッフ×複数日×予約あり（総合） 1`] = `
{
  "by_staff": [
    {
      "display_name": "山田",
      "slots": [
        {
          "date": "2026-05-09",
          "end": "13:30",
          "start": "12:30",
        },
        {
          "date": "2026-05-10",
          "end": "11:00",
          "start": "10:00",
        },
        {
          "date": "2026-05-10",
          "end": "11:30",
          "start": "10:30",
        },
      ],
      "staff_id": "S1",
    },
    {
      "display_name": "佐藤",
      "slots": [
        {
          "date": "2026-05-10",
          "end": "12:00",
          "start": "11:00",
        },
        {
          "date": "2026-05-10",
          "end": "12:30",
          "start": "11:30",
        },
        {
          "date": "2026-05-10",
          "end": "15:30",
          "start": "14:30",
        },
      ],
      "staff_id": "S2",
    },
  ],
}
`;
